--- a/src/pages/Favorites/Favorites.module.css
+++ b/src/pages/Favorites/Favorites.module.css
@@ -7,6 +7,13 @@
   padding: 20px 100px;
 }
 
+.favoritesHeader {
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  gap: 20px;
+}
+
 .subtitle {
   margin-bottom: 24px;
   font-size: 32px;
@@ -63,3 +70,19 @@
 .mySwiper {
   margin-bottom: 50px;
 }
+
+.spinner {
+  width: 30px;
+  height: 30px;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  border-left-color: var(--accent);
+  border-radius: 50%;
+  animation: spin 0.6s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
