--- a/src/components/Catalog/Catalog.module.scss
+++ b/src/components/Catalog/Catalog.module.scss
@@ -1,7 +1,7 @@
 .catalogWrap {
   min-width: 230px;
   height: auto;
-  background-color: var(--white);
+  background-color: $white;
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
@@ -13,7 +13,7 @@
 
 .catalogWrap h3 {
   margin-bottom: 16px;
-  color: var(--main-text);
+  color: $main-text;
   font-size: 20px;
   text-decoration: underline;
   text-underline-offset: 6px;
@@ -40,10 +40,9 @@
   transition: box-shadow 0.3s ease, color 0.3s ease;
 }
 
-
 .checkbox {
   margin-right: 8px;
-  accent-color: var(--accent);
+  accent-color: $accent;
   width: 18px;
   height: 18px;
   cursor: pointer;
@@ -51,5 +50,5 @@
 
 .active {
   box-shadow: 0 0 10px rgba(0, 128, 0, 0.5);
-  color: var(--accent);
+  color: $accent;
 }
