--- a/src/pages/ProductDetails/ProductDetails.module.scss
+++ b/src/pages/ProductDetails/ProductDetails.module.scss
@@ -1,36 +1,30 @@
 .ProductDetails {
-  padding-top: 50px;
+  padding-top: 100px;
 }
 
 .productContainer {
-  padding: 20px 100px;
+  // padding: 20px 100px;
   position: relative;
 }
 
 .goBack {
-  position: absolute;
-  top: -50px;
-  left: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex(row, center, center, 10px);
+  @include absolute-position(null, null, -80px, 50px);
   max-width: 240px;
-  gap: 10px;
   background-color: transparent;
   border: none;
   font-size: 18px;
   padding: 5px;
-  transition: color 0.3s ease, transform 0.3s ease;
+  @include transition((color, transform), 0.3s, ease);
 }
 
 .goBack span {
+  @include flex(row, center, center);
   font-size: 24px;
-  display: flex;
-  align-items: center;
 }
 
 .goBack:hover {
-  color: var(--accent);
+  color: $accent;
 }
 
 .goBack:active {
@@ -38,32 +32,19 @@
 }
 
 .productHeaderWrap {
-  display: flex;
+  @include flex(row, space-between, flex-start, 24px);
   flex-wrap: wrap;
-  justify-content: space-between;
   padding: 24px;
-  align-items: flex-start;
 }
 
 .productImgWrap {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex();
   padding: 30px 0;
   overflow: hidden;
-  max-width: 500px;
-  max-height: 400px;
-}
-
-.productImg {
-  object-fit: cover;
 }
 
 .descriptionWrap {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: space-between;
+  @include flex(column, space-between, start);
   min-height: 400px;
 }
 
@@ -72,7 +53,7 @@
 }
 
 .apoint {
-  background: var(--white);
+  background: $white;
   font-weight: 500;
   max-width: 400px;
   padding: 8px 16px;
@@ -95,35 +76,30 @@
 .howMany {
   margin-bottom: 20px;
   font-size: 18px;
-  color: var(--grey-text);
+  color: $grey-text;
   margin-bottom: 32px;
 }
 
 .btnWrap {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  @include flex(row, space-between, center);
   margin-bottom: 12px;
 }
 
 .btnBuy {
+  @include flex(row, space-between, center);
   width: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   padding: 10px 30px;
   border-radius: 30px;
-  background-color: var(--accent);
+  background-color: $accent;
   font-size: 22px;
   font-weight: 400;
-  color: var(--white);
-  font-family: var(--font-family);
+  color: $white;
   border: none;
-  transition: opacity 0.4s ease;
+  @include transition(opacity, 0.3s, ease);
 }
 
 .btnBuy:hover {
-  opacity: 85%;
+  opacity: 0.85;
 }
 
 .price {
@@ -146,17 +122,14 @@
 }
 
 .modalwrap {
-  position: absolute;
-  top: 0;
-  left: 0;
+  @include absolute-position(0, 0, 0, 0, 1000);
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 150%;
-  z-index: 1000;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
   cursor: pointer;
+  @include transition((opacity, visibility), 0.3s, ease);
 }
 
 .modalwrap img {
