--- a/src/pages/ProductDetails/components/Main/Main.module.scss
+++ b/src/pages/ProductDetails/components/Main/Main.module.scss
@@ -1,26 +1,17 @@
 
 .productHeaderWrap {
-  display: flex;
+  @include flex(row, space-evenly, start, 24px);
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: flex-start;
 }
 
 .productImgWrap {
-  width: 380px;
-  height: 380px;
+  @include flex();
   overflow: hidden;
   border-radius: 12px;
   flex-shrink: 0;
-  background-color: #f5f5f5;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .productImg {
-  width: 100%;
-  height: 100%;
   object-fit: none;
   object-position: center;
   display: block;
@@ -30,10 +21,7 @@
 
 
 .descriptionWrap {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: space-between;
+  @include flex(column, space-between, start);
   min-height: 400px;
 }
 
@@ -43,7 +31,7 @@
 
 .apoint {
   width: 100%;
-  background: var(--white);
+  background: $white;
   font-weight: 600;
   max-width: 400px;
   padding: 4px 16px;
@@ -72,37 +60,30 @@
 .howMany {
   margin-bottom: 20px;
   font-size: 18px;
-  color: var(--grey-text);
+  color: $grey-text;
   margin-bottom: 32px;
 }
 
 .btnWrap {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  @include flex(row, space-between, center);
   margin-bottom: 12px;
 }
 
 .btnBuy {
+  @include flex(row, space-between, center);
   width: 210px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   padding: 10px 30px;
   border-radius: 30px;
-  background-color: var(--accent);
+  background-color: $accent;
   font-size: 22px;
   font-weight: 400;
-  color: var(--white);
-  font-family: var(--font-family);
+  color: $white;
   border: none;
   transition: opacity 0.4s ease;
 }
 
 .btnBuy span {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex(row, center, center);
 }
 
 .btnBuy:hover {
@@ -117,7 +98,7 @@
 
 .reviewsCount {
   font-size: 18px;
-  color: var(--main-text);
+  color: $main-text;
   margin-top: 8px
 }
 
