--- a/src/components/AuthModal/AuthModal.module.scss
+++ b/src/components/AuthModal/AuthModal.module.scss
@@ -4,6 +4,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 700px;
+  max-height: 90vh;
   background-color: var(--white);
   border-radius: 10px;
   padding: 80px;
